# DownloadManagerCPP

./: .gitignore  CMakeLists.txt  README.md
src/: AddUrlWindow.cpp  AddUrlWindow.hpp  DownloadEntry.cpp  DownloadEntry.hpp  FSClient.cpp  FSClient.hpp  MainWindow.cpp  MainWindow.hpp  ModelColumns.hpp  NetClient.cpp  NetClient.hpp  StringUtil.cpp  main.cpp
